[project]
name = "DependabotTrigger"
dynamic = ["version"]
requires-python = "~=3.13.0"
dependencies = ["structlog==25.4.0", "pygithub==2.7.0", "playwright==1.54.0"]

[project.optional-dependencies]
dev = ["ruff==0.12.10", "vulture==2.14", "ty==0.0.1a19"]

[tool.uv]
required-version = "~=0.8.0"
package = false

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"



