[project]
name = "DependabotTrigger"
dynamic = ["version"]
requires-python = "~=3.14.0"
dependencies = ["structlog==25.5.0", "pygithub==2.8.1", "playwright==1.58.0"]

[project.optional-dependencies]
dev = ["ruff==0.15.1", "vulture==2.14", "ty==0.0.17"]

[tool.uv]
required-version = "~=0.10.0"
package = false
override-dependencies = ["urllib3==2.6.3", "cryptography==46.0.5"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]

ignore = [
  "COM812",  # Ignore due to conflict with Ruff formatter
  "ISC001",  # Ignore due to conflict with Ruff formatter
  "PLR2004", # Ignore magic value
  "D104",    # Ignore missing docstring in public package
  "D100",    # Ignore missing docstring in public module
  "N999",    # Ignore invalid module name
  "SIM112",  # Ignore Lowercase environment variables (used for GitHub actions)
]

fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"
